--- a/css/reset.css
+++ b/css/reset.css
@@ -21,6 +21,8 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
+	font-family: 'Pretendard';
+	color: #111;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
