--- a/css/reset.css
+++ b/css/reset.css
@@ -22,9 +22,9 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	font-family: 'Pretendard';
-	color: #111;
 	vertical-align: baseline;
 }
+body{color: #111;}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
