서비스 페이지 완료

--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,9 @@
+/* 포인트 색상 */
+mark{color: #2de09f;}
+
 /* 제목 공통 */
 .title01{font-size: 40px; font-weight: 700; line-height: 50px;}
+.title02{font-size: 36px; font-weight: 700; line-height: 43px;}
 
 /* 컨텐츠 크기 */
 .contentSize{max-width: 1180px; margin: 0 auto;}
@@ -9,7 +13,7 @@
 
 /* 해더 공통 */
 :not(.mainPage) header{position: sticky; }
-header{top: 0; left: 0; display: flex; justify-content: center; align-items: center; background-color: white; border-bottom: 1px solid #dedede;}
+header{top: 0; left: 0; display: flex; justify-content: center; align-items: center; background-color: white; border-bottom: 1px solid #dedede; z-index: 100;}
 header :is(h1 , div){position: absolute; top: 0; height: 100%; display: flex; align-items: center;}
 header h1{left: 30px;}
 header h1 a{width: 96px; height: 20px; background-image: url('../images/logo-color.png');}
@@ -29,7 +33,8 @@ header.active :is(ul li a , div a){color: white;}
 header.active nav ul li:is(.active ,:hover)::before{background-color: white;}
 
 /* 푸터 */
-footer{padding: 39.5px 0 75px; border-top: 1px solid #dedede; margin-top: 160px;}
+.mainPage footer{margin-top: 160px;}
+footer{padding: 39.5px 0 75px; border-top: 1px solid #dedede;}
 footer > div{position: relative;}
 footer > div ul{display: flex; margin-bottom: 40px;}
 footer > div ul li:not(:last-child){margin-right: 30px;}
