--- a/css/page.css
+++ b/css/page.css
@@ -104,3 +104,35 @@
 .lowestArea > div div h2 small{display: block; font-size: 26px; margin-bottom: 10px;}
 .lowestArea > div div a{font-size: 16px; font-weight: 700; color: #2de09f; text-align: center; width: 200px; line-height: 50px; background-color: white; border-radius: 6px;}
 .lowestArea > div img{width: 630px;}
+
+
+/* 고객센터 */
+/* 고객센터 공통 */
+.centerPage [class *='Page']{padding-top: 100px;}
+.centerPage [class *='Page'] h2{text-align: center; margin-bottom: 70px;}
+.centerPage [class *='Page'] .subMenu{display: flex; justify-content: center; margin-bottom: 50px;}
+.centerPage [class *='Page'] .subMenu li:not(:last-child){margin-right: 60px;}
+.centerPage [class *='Page'] .subMenu li a{font-size: 18px; font-weight: 400;}
+.centerPage [class *='Page'] .subMenu li:is(.active , :hover){position: relative;}
+.centerPage [class *='Page'] .subMenu li:is(.active , :hover) a{font-weight: 700;}
+.centerPage [class *='Page'] .subMenu li:is(.active , :hover)::after{content: ''; position: absolute; left: 0; bottom: -6px; width: 100%; height: 2px; background-color: black;}
+.centerPage [class *='Page'] .boardArea{border-top: 1px solid #111;}
+.centerPage [class *='Page'] .boardArea li{border-bottom: 1px solid #dedede;}
+.centerPage [class *='Page'] .boardArea li a{display: flex; align-items: center;}
+.centerPage [class *='Page'] .boardArea li a time{margin-left: auto; padding-right: 40px;}
+.centerPage [class *='Page'] .pagerArea{display: flex; justify-content: center; align-items: center; margin-top: 60px;}
+.centerPage [class *='Page'] .pagerArea > a{width: 24px; line-height: 24px;}
+.centerPage [class *='Page'] .pagerArea > a:nth-of-type(1){background-image: url('../images/pager-first.png');}
+.centerPage [class *='Page'] .pagerArea > a:nth-of-type(2){background-image: url('../images/pager-prev.png');}
+.centerPage [class *='Page'] .pagerArea > a:nth-of-type(3){background-image: url('../images/pager-next.png');}
+.centerPage [class *='Page'] .pagerArea > a:nth-of-type(4){background-image: url('../images/pager-last.png');}
+.centerPage [class *='Page'] .pagerArea ol{display: flex; margin: 0 20px;}
+.centerPage [class *='Page'] .pagerArea ol li:not(:last-child){margin-right: 40px;}
+.centerPage [class *='Page'] .pagerArea ol li a{font-size: 15px; font-weight: 700;}
+.centerPage [class *='Page'] .pagerArea ol li:is(.active , :hover){position: relative;}
+.centerPage [class *='Page'] .pagerArea ol li:is(.active , :hover) a{color: #2de09f;}
+.centerPage [class *='Page'] .pagerArea ol li:is(.active , :hover)::after{content: ''; position: absolute; left: 0; bottom: -1px; width: 100%; height: 2px; background-color: #2de09f;}
+/* 고객센터 - 공지사항 */
+.centerPage .noticePage .boardArea li a{height: 90px; font-size: 15px;}
+.centerPage .noticePage .boardArea li a span{width: 110px; text-align: center; margin-right: 10px;}
+.centerPage .noticePage .boardArea li a p{font-weight: 700;}
