--- a/css/page.css
+++ b/css/page.css
@@ -118,8 +118,9 @@
 .centerPage [class *='Page'] .subMenu li:is(.active , :hover)::after{content: ''; position: absolute; left: 0; bottom: -6px; width: 100%; height: 2px; background-color: black;}
 .centerPage [class *='Page'] .boardArea{border-top: 1px solid #111;}
 .centerPage [class *='Page'] .boardArea li{border-bottom: 1px solid #dedede;}
-.centerPage [class *='Page'] .boardArea li a{display: flex; align-items: center;}
-.centerPage [class *='Page'] .boardArea li a time{margin-left: auto; padding-right: 40px;}
+.centerPage [class *='Page'] .boardArea li a{display: flex; align-items: center; font-size: 15px;}
+.centerPage [class *='Page'] .boardArea li a time{margin-left: auto;}
+.centerPage [class *='Page'] .boardArea li a p{font-weight: 700;}
 .centerPage [class *='Page'] .pagerArea{display: flex; justify-content: center; align-items: center; margin-top: 60px;}
 .centerPage [class *='Page'] .pagerArea > a{width: 24px; line-height: 24px;}
 .centerPage [class *='Page'] .pagerArea > a:nth-of-type(1){background-image: url('../images/pager-first.png');}
@@ -133,6 +134,10 @@
 .centerPage [class *='Page'] .pagerArea ol li:is(.active , :hover) a{color: #2de09f;}
 .centerPage [class *='Page'] .pagerArea ol li:is(.active , :hover)::after{content: ''; position: absolute; left: 0; bottom: -1px; width: 100%; height: 2px; background-color: #2de09f;}
 /* 고객센터 - 공지사항 */
-.centerPage .noticePage .boardArea li a{height: 90px; font-size: 15px;}
+.centerPage .noticePage .boardArea li a{height: 90px;}
 .centerPage .noticePage .boardArea li a span{width: 110px; text-align: center; margin-right: 10px;}
-.centerPage .noticePage .boardArea li a p{font-weight: 700;}
+.centerPage .noticePage .boardArea li a time{padding-right: 40px; }
+/* 고객센터 - 이벤트 */
+.centerPage .eventPage .boardArea li{padding: 0 20px 0 30px;}
+.centerPage .eventPage .boardArea li a{height: 80px;}
+.centerPage .eventPage .boardArea li a::after{content: ''; width: 40px; height: 40px; background: url('../images/icon-open.png') no-repeat center / cover; margin-left: 50px;}
