--- a/css/global.css
+++ b/css/global.css
@@ -11,15 +11,31 @@ mark{color: #2de09f;}
 /* 이미지 박스 */
 .imgBox{text-indent: -9999px; background-repeat: no-repeat; background-position: center; background-size: cover;}
 
+/* 버튼 케이스 */
+[class|='btn']{font-size: 20px; font-weight: 700; height: 60px; display: flex; justify-content: center; align-items: center; border-radius: 6px;}
+.btn-color{background-color: #2de09f; color: white; border: none;}
+.btn-border{color: #2de09f; border: 1px solid #2de09f;}
+
+/* 체크박스 , 라디오 박스 */
+input[type="checkbox"] , input[type="radio"]{display: none;}
+:is(input[type="checkbox"] , input[type="radio"]) + label{display: inline-flex; align-items: center;}
+:is(input[type="checkbox"] , input[type="radio"]) + label::before{content: ''; width: 20px; height: 20px; margin-right: 10px; background-repeat: no-repeat; background-position: center; background-size: cover;}
+/* input[type="checkbox"] + label::before{background-image: ;} */
+input[type="checkbox"]:checked + label::before{background-image: url('../images/icon-check-chekced.png');}
+input[type="radio"] + label::before{background-image: url('../images/icon-radio.png');}
+input[type="radio"]:checked + label::before{background-image: url('../images/icon-radio-chekced.png');}
+
+
 /* form */
-fieldset{width: 680px; margin: 0 auto;}
+.width680{width: 680px;}
+.width400{width: 400px;}
+fieldset{font-size: 15px; margin: 0 auto;}
 fieldset ul{display: flex; flex-wrap: wrap; justify-content: space-between; margin-bottom: 60px;}
-fieldset ul li:not(:last-child){margin-bottom: 30px;}
 fieldset ul li:not(.half){width: 100%;}
 fieldset ul li.half{width: 47.79%;}
-fieldset ul li label{display: block; font-size: 15px; font-weight: 700; margin-bottom: 15px;}
+fieldset ul li label{display: block; font-weight: 700; margin-bottom: 15px; margin-top: 30px;}
 fieldset ul li div{display: flex; align-items: center; gap: 10px;}
-fieldset ul li :is(div :is(input , textarea , select) , .privacyArea){font-size: 15px; box-sizing: border-box; background-color: #f8f8f8; border: 1px solid #f0f0f0; border-radius: 6px;}
+fieldset ul li :is(div :is(input , textarea , select) , .privacyArea){box-sizing: border-box; background-color: #f8f8f8; border: 1px solid #f0f0f0; border-radius: 6px;}
 fieldset ul li div :is(input , select){height: 50px; padding: 0 20px;}
 fieldset ul li div :is(input , textarea)::placeholder{color: #999;}
 fieldset ul li div textarea{height: 300px; padding: 20px;}
@@ -28,6 +44,7 @@ fieldset ul li div:has(button) button{position: absolute; top: 50%; right: 5px; 
 fieldset ul li div *:first-child{flex: 1;}
 fieldset ul li div *:first-child ~ :is(input , select){width: 200px;}
 fieldset ul li div.privacyArea{height: 200px;}
+fieldset input[type="submit"]{margin: 0 auto;}
 
 
 /* 해더 공통 */
