--- a/css/global.css
+++ b/css/global.css
@@ -27,9 +27,10 @@ input[type="radio"]:checked + label::before{background-image: url('../images/ico
 
 
 /* form */
+[class*="width"]{margin: 0 auto;}
 .width680{width: 680px;}
 .width400{width: 400px;}
-fieldset{font-size: 15px; margin: 0 auto;}
+fieldset{font-size: 15px;}
 fieldset ul{margin-bottom: 60px;}
 fieldset ul li :is(div :is(input , textarea , select) , .termsBox){box-sizing: border-box; background-color: #f8f8f8; border: 1px solid #f0f0f0; border-radius: 6px;}
 fieldset ul li :is(div textarea , .termsBox){padding: 20px; align-items: flex-start;}
