--- a/css/page.css
+++ b/css/page.css
@@ -209,3 +209,11 @@
 .singPage .inputPage fieldset > p b{width: 70px; font-weight: 700;}
 .singPage .inputPage fieldset > p:not(:last-of-type){margin-bottom: 30px;}
 .singPage .inputPage fieldset input[type="submit"]{width: 195px;}
+/* 회원가입 - 완료 */
+.singPage .finPage > div{margin: 0 auto; text-align: center;}
+.singPage .finPage > div strong{display: block; font-size: 36px; line-height: 54px; margin-bottom: 40px;}
+.singPage .finPage > div strong mark{display: block; font-weight: 700;}
+.singPage .finPage > div p{font-size: 15px; line-height: 24px; margin-bottom: 60px;}
+.singPage .finPage > div p b{display: block; font-weight: 700;}
+.singPage .finPage > div a{width: 100%;}
+.singPage .finPage > div a:not(:last-of-type){margin-bottom: 20px;}
