비밀번호 재설정 첫 페이지 완료

--- a/css/global.css
+++ b/css/global.css
@@ -30,7 +30,13 @@ input[type="radio"]:checked + label::before{background-image: url('../images/ico
 [class*="width"]{margin: 0 auto;}
 .width680{width: 680px;}
 .width400{width: 400px;}
+.linkBox{display: flex; justify-content: center; align-items: center; margin-bottom: 80px;}
+.linkBox li:not(:last-child){margin-right: 60px;}
+.linkBox li a{font-size: 18px;}
+.linkBox li:is(.active , :hover) a{font-weight: 700; text-decoration-line: underline; text-underline-offset: 4px; text-decoration-thickness: 2px;}
 fieldset{font-size: 15px;}
+fieldset legend{font-size: 18px; font-weight: 700;}
+fieldset legend::before{content: ''; display: block; width: 35px; height: 3px; background-color: #2de09f; margin-bottom: 15px;}
 fieldset ul{margin-bottom: 60px;}
 fieldset ul li :is(div :is(input , textarea , select) , .termsBox){box-sizing: border-box; background-color: #f8f8f8; border: 1px solid #f0f0f0; border-radius: 6px;}
 fieldset ul li :is(div textarea , .termsBox){padding: 20px; align-items: flex-start;}
@@ -43,10 +49,12 @@ fieldset .inputBox li div{display: flex; gap: 10px;}
 fieldset .inputBox li div :is(input , select){height: 50px; padding: 0 20px;}
 fieldset .inputBox li div :is(input , textarea)::placeholder{color: #999;}
 fieldset .inputBox li div:not(:is( textarea , .termsBox)){align-items: center;}
-fieldset .inputBox li div:has(button , mark){position: relative;}
-fieldset .inputBox li div:has(button , mark) :is(button , mark){position: absolute; top: 50%; transform: translateY(-50%);}
-fieldset .inputBox li div:has(button) button{right: 5px; font-size: 14px; font-weight: 400; color: #999; width: 54px; height: 40px; background-color: white; border: 1px solid #dedede; border-radius: 6px;}
-fieldset .inputBox li div:has(mark) mark.error{right: 15px; font-size: 12px; color: #eb2f2f;}
+fieldset .inputBox li div:has(button , mark , time){position: relative;}
+fieldset .inputBox li div:has(button , mark , time) :is(button , mark , time){position: absolute; top: 50%; transform: translateY(-50%);}
+fieldset .inputBox li div:has(button) button{right: 5px; font-size: 14px; font-weight: 400; color: #999; height: 40px; padding: 0 15px; background-color: white; border: 1px solid #dedede; border-radius: 6px;}
+fieldset .inputBox li div:has(mark , time) :is(mark.error , time){color: #eb2f2f;}
+fieldset .inputBox li div:has(mark) mark.error{right: 15px; font-size: 12px;}
+fieldset .inputBox li div:has(time) time{right: 20px; font-size: 14px;}
 fieldset .inputBox li div *:first-child{flex: 1;}
 fieldset .inputBox li div *:first-child ~ :is(input , select){width: 200px;}
 fieldset input[type="submit"]{margin: 0 auto;}
