--- a/css/page.css
+++ b/css/page.css
@@ -203,10 +203,8 @@
 .singPage .agreePage fieldset .boardBox-drop li a{height: 70px; padding: 0 20px 0 30px;}
 .singPage .agreePage fieldset input[type="submit"]{width: 195px;}
 /* 회원가입 - 회원정보 입력 */
-.singPage .inputPage fieldset legend{margin-bottom: 40px;}
-.singPage .inputPage fieldset > p{display: flex; align-items: center; font-size: 15px; font-weight: 400;}
+.singPage .inputPage fieldset > p{display: flex; align-items: center; font-size: 15px; font-weight: 400; margin-bottom: 30px;}
 .singPage .inputPage fieldset > p b{width: 70px; font-weight: 700;}
-.singPage .inputPage fieldset > p:not(:last-of-type){margin-bottom: 30px;}
 .singPage .inputPage fieldset input[type="submit"]{width: 195px;}
 /* 회원가입 - 완료 */
 .singPage .finPage > div{margin: 0 auto; text-align: center;}
@@ -217,6 +215,6 @@
 .singPage .finPage > div a{width: 100%;}
 .singPage .finPage > div a:not(:last-of-type){margin-bottom: 20px;}
 /* 비밀번호 찾기 */
-.singPage .passwordPage{}
-.singPage .passwordPage fieldset legend{margin-bottom: 10px;}
-.singPage .passwordPage fieldset input[type="submit"]{width: 100%;}
+.singPage .passwordPage fieldset .inputBox{margin-bottom: 40px;}
+.singPage .passwordPage fieldset input:is([type="submit"] , [type="reset"]){width: 100%;}
+.singPage .passwordPage fieldset input[type="reset"]{margin-top: 20px;}
