--- a/css/import.css
+++ b/css/import.css
@@ -1,5 +1,5 @@
 /* font */
-@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+/* @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css'); */
 
 @import url('reset.css');
 @import url('global.css');
