--- a/css/reset.css
+++ b/css/reset.css
@@ -2,6 +2,8 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+/* font */
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
